<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".AIS_LoginStudentActivity">

    <ImageView
        android:id="@+id/img_ls_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo_ais" />


    <EditText
        android:id="@+id/et_ls_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:hint="@string/hint_login"
        android:width="250dp"
        />

    <EditText
        android:id="@+id/et_ls_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_pwd"
        android:width="250dp"
        />

    <Button
        android:id="@+id/btn_ls_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:width="150dp"
        android:text="@string/btn_login"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_ls_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:width="150dp"
        android:text="@string/btn_home"
        android:textAllCaps="false" />

</LinearLayout>